fix(docs): issue with two-line button on mobile

--- a/packages/docs/src/css/shared.module.scss
+++ b/packages/docs/src/css/shared.module.scss
@@ -13,7 +13,8 @@
   box-shadow: 0 2px 25px #f6d6b8;
   color: #000;
   font-weight: bold;
-  height: 3em;
+  line-height: 1.5em;
+  padding: 0.5em;
   text-transform: uppercase;
   transition: all 0.2s ease-in;
   width: 100%;
@@ -39,7 +40,8 @@
   box-shadow: 0 2px 25px #f6d6b8;
   color: #000;
   font-weight: bold;
-  height: 3em;
+  line-height: 1.5em;
+  padding: 0.5em;
   text-transform: uppercase;
   transition: all 0.2s ease-in;
   width: 100%;
